--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "classnames": "^2.3.2",
+    "framer-motion": "^8.1.5",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
